checkpolicy/tests/negative/unknown_class.te
module unknown_class 1.0;

require {
	type foo_t;
}

allow foo_t self:not_a_class read;
